smelter upgrade